src/validation/tests/snapshots/rusty__validation__tests__bitaccess_validation_test__bitaccess_range_test.snap
---
source: src/validation/tests/bitaccess_validation_test.rs
expression: "&diagnostics"
---
error[E057]: Bit-Wise access for type BYTE must be in range 0..7
  ┌─ <internal>:6:19
  │
6 │                 a.8;
  │                   ^ Bit-Wise access for type BYTE must be in range 0..7

error[E057]: Bit-Wise access for type WORD must be in range 0..15
  ┌─ <internal>:7:19
  │
7 │                 b.16;
  │                   ^^ Bit-Wise access for type WORD must be in range 0..15

error[E057]: Bit-Wise access for type DWORD must be in range 0..31
  ┌─ <internal>:8:19
  │
8 │                 c.32;
  │                   ^^ Bit-Wise access for type DWORD must be in range 0..31

error[E057]: Bit-Wise access for type LWORD must be in range 0..63
  ┌─ <internal>:9:19
  │
9 │                 d.64;
  │                   ^^ Bit-Wise access for type LWORD must be in range 0..63
